--- a/templates/trend_control.html
+++ b/templates/trend_control.html
@@ -6,89 +6,140 @@
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center">
         <h1>Trend Control</h1>
-        <!-- Button trigger modal with plus icon -->
-        <button type="button" class="btn-link p-0" data-toggle="modal" data-target="#formModal" style="border: none; background: none; box-shadow: none;" onclick="editTrend('', '', '', '', '', '', '', '', 'Add Trend')">
+        <!-- Button trigger modal for adding a new trend -->
+        <button type="button" class="btn-link p-0" data-toggle="modal" data-target="#addTrendModal" style="border: none; background: none; box-shadow: none;">
             <img src="{{ url_for('static', filename='images/plus.svg') }}" alt="Plus Icon" width="32" height="32">
         </button>
     </div>
     <br>
 
-    <!-- Modal -->
-    <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalTitle" aria-hidden="true">
+    <!-- Modal for Adding a New Trend -->
+    <div class="modal fade" id="addTrendModal" tabindex="-1" role="dialog" aria-labelledby="addTrendModalTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Add Trend</h5>
-                    <button type="button" class="btn-link p-0" data-dismiss="modal" style="border: none; background: none; box-shadow: none;" onclick="editTrend('', '', '', '', '', '', '', '', '')">
-                        <img src="{{ url_for('static', filename='images/x-square.svg') }}" alt="Close" width="16" height="16">
-                    </button>
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="addTrendModalTitle">Add Trend</h5>
+            <button type="button" class="btn-link p-0" data-dismiss="modal" style="border: none; background: none; box-shadow: none;">
+                <img src="{{ url_for('static', filename='images/x-square.svg') }}" alt="Close" width="16" height="16">
+            </button>
+            </div>
+            <div class="modal-body">    
+            <!-- Trend Data Entry Form -->
+            <form method="post" action="{{ url_for('trend_control') }}">
+                <input type="hidden" name="trend_id" value="">
+                <div class="mb-3">
+                    <label for="system_id" class="form-label">Select System:</label>
+                    <select class="form-select" id="system_id" name="system_id" required>
+                        {% for system in systems %}
+                        <option value="{{ system['id'] }}">{{ system['device_number'] }} - {{ system['description'] }}</option>
+                        {% endfor %}
+                    </select>
                 </div>
-                <div class="modal-body">
-                    <!-- Trend Data Entry Form -->
-                    <form method="post" action="{{ url_for('trend_control') }}">
-                        <input type="hidden" id="trend_id" name="trend_id" value="">
-                        <div class="mb-3">
-                            <label for="system_id" class="form-label">Select System:</label>
-                            <select class="form-select" id="system_id" name="system_id" required>
-                                {% for system in systems %}
-                                <option value="{{ system['id'] }}">{{ system['device_number'] }} - {{ system['description'] }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                        <div class="mb-3">
-                            <label for="tag_set_id" class="form-label">Select Tag Set:</label>
-                            <select class="form-select" id="tag_set_id" name="tag_set_id" required>
-                                {% for tag_set in tag_sets %}
-                                <option value="{{ tag_set['id'] }}">{{ tag_set['tag_set_name'] }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                        <div class="mb-3">
-                            <label for="cycles" class="form-label">Cycles:</label>
-                            <input type="number" class="form-control" id="cycles" name="cycles" value="864000" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="cycle_time" class="form-label">Cycle Time (ms):</label>
-                            <input type="number" class="form-control" id="cycle_time" name="cycle_time" step="0.1" value="0.1" required>
-                            <small id="trend_duration" class="form-text text-muted"></small>
-                        </div>
-                        <div class="mb-3">
-                            <label for="buffer_size" class="form-label">Buffer Size:</label>
-                            <input type="number" class="form-control" id="buffer_size" name="buffer_size" value="100" required>
-                            <small id="buffer_duration" class="form-text text-muted"></small>
-                        </div>
-                        <div class="mb-3">
-                            <label for="description" class="form-label">Description:</label>
-                            <input type="text" class="form-control" id="description" name="description">
-                        </div>
-                        <button type="submit" class="btn btn-primary w-100">Save Trend</button>
-                    </form>
+                <div class="mb-3">
+                    <label for="tag_set_id" class="form-label">Select Tag Set:</label>
+                    <select class="form-select" id="tag_set_id" name="tag_set_id" required>
+                        {% for tag_set in tag_sets %}
+                        <option value="{{ tag_set['id'] }}">{{ tag_set['tag_set_name'] }}</option>
+                        {% endfor %}
+                    </select>
                 </div>
+                <div class="mb-3">
+                    <label for="cycles" class="form-label">Cycles:</label>
+                    <input type="number" class="form-control" id="cycles" name="cycles" value="864000" required>
+                </div>
+                <div class="mb-3">
+                    <label for="cycle_time" class="form-label">Cycle Time (s):</label>
+                    <input type="number" class="form-control" id="cycle_time" name="cycle_time" step="0.1" value="0.1" required>
+                    <small id="trend_duration" class="form-text text-muted"></small>
+                </div>
+                <div class="mb-3">
+                    <label for="buffer_size" class="form-label">Buffer Size:</label>
+                    <input type="number" class="form-control" id="buffer_size" name="buffer_size" value="100" required>
+                    <small id="buffer_duration" class="form-text text-muted"></small>
+                </div>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description:</label>
+                    <input type="text" class="form-control" id="description" name="description">
+                </div>  
+            </div>
+            <div class="modal-footer">
+            <button type="submit" class="btn btn-primary w-100">Save Trend</button>
+            </form> 
             </div>
         </div>
-    </div>
+        </div>
+    </div> 
+
+    <!-- Modal for Editing an Existing Trend -->
+    <div class="modal fade" id="editTrendModal" tabindex="-1" role="dialog" aria-labelledby="editTrendModalTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="editTrendModalTitle">Edit Trend</h5>
+            <button type="button" class="btn-link p-0" data-dismiss="modal" style="border: none; background: none; box-shadow: none;">
+                <img src="{{ url_for('static', filename='images/x-square.svg') }}" alt="Close" width="16" height="16">
+            </button>
+            </div>
+            <div class="modal-body">    
+            <!-- Trend Edit Form -->
+            <form method="post" action="{{ url_for('edit_trend') }}">
+                <input type="hidden" name="trend_id" id="edit_trend_id" value="">
+                <div class="mb-3">
+                    <label for="edit_device_number" class="form-label">Device Number:</label>
+                    <input type="text" name="device_number" class="form-control" id="edit_device_number">
+                </div>
+                <div class="mb-3">
+                    <label for="edit_tags" class="form-label">Tags (one per line):</label>
+                    <textarea id="edit_tags" name="tags" class="form-control" rows="5" required></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="edit_cycles" class="form-label">Cycles:</label>
+                    <input type="number" class="form-control" id="edit_cycles" name="cycles" required>
+                </div>
+                <div class="mb-3">
+                    <label for="edit_cycle_time" class="form-label">Cycle Time (s):</label>
+                    <input type="number" class="form-control" id="edit_cycle_time" name="cycle_time" step="0.1" required>
+                    <small id="edit_trend_duration" class="form-text text-muted"></small>
+                </div>
+                <div class="mb-3">
+                    <label for="edit_buffer_size" class="form-label">Buffer Size:</label>
+                    <input type="number" class="form-control" id="edit_buffer_size" name="buffer_size" required>
+                    <small id="edit_buffer_duration" class="form-text text-muted"></small>
+                </div>
+                <div class="mb-3">
+                    <label for="edit_description" class="form-label">Description:</label>
+                    <input type="text" class="form-control" id="edit_description" name="description">
+                </div>
+            </div>
+            <div class="modal-footer">
+            <button type="submit" class="btn btn-primary w-100">Save Changes</button>
+            </form> 
+            </div>
+        </div>
+        </div>
+    </div> 
 
     <!-- Existing Trends Section -->
     <h2 class="mt-5">Existing Trends</h2>
     <ul class="list-group">
         {% for trend in trends %}
         <li class="list-group-item d-flex justify-content-between align-items-start">
-            <div class="flex-grow-1" style="margin-right: 10px;">
-                <strong>{{ trend['device_number'] }}</strong> - {{ trend['description'] }}
+            <div class="flex-grow-1 w-100">
+                <strong>{{ trend['device_number'] }}</strong> - {{ trend['description'] }} 
                 <br> IP: {{ trend['plc_ip'] }} / Subnet: {{ trend['subnet'] }}
-                <br> Cycles: {{ trend['cycles'] }} / Cycle Time: {{ trend['cycle_time'] }} ms / Buffer Size: {{ trend['buffer_size'] }}
+                <br> Cycles: {{ trend['cycles'] }} / Cycle Time: {{ trend['cycle_time'] }} s / Buffer Size: {{ trend['buffer_size'] }}
                 <br> Tags: {{ trend['tags'] }}
             </div>
-            <div class="d-flex flex-column align-items-start">
-                <!-- Safely pass the trend data -->
-                <form method="post" action="{{ url_for('delete_trend', id=trend['id']) }}">
-                    <button type="submit" class="btn-link p-0" style="border: none; background: none; box-shadow: none; margin-bottom: 1cap;">
-                        <img src="{{ url_for('static', filename='images/x-square.svg') }}" alt="Close" width="16" height="16">
-                    </button>
-                </form>
-                <button class="btn-link p-0" style="border: none; background: none; box-shadow: none;" data-toggle="modal" data-target="#formModal" onclick="editTrend({{ trend['id'] }}, '{{ trend['system_id'] }}', '{{ trend['tag_set_id'] }}', {{ trend['cycles'] }}, {{ trend['cycle_time'] }}, {{ trend['buffer_size'] }}, '{{ trend['description'] }}', '{{ trend['tags'] }}', 'Edit Trend')">
-                    <img src="{{ url_for('static', filename='images/edit.svg') }}" alt="Edit" width="16" height="16">
+            <div class="d-flex flex-column align-items-start" style="width: 100px;">
+                <!-- Edit Button to trigger the Edit Modal -->
+                <button type="button" class="btn btn-sm btn-warning mb-2" style="width: 100%;" 
+                    data-toggle="modal" data-target="#editTrendModal" 
+                    onclick="loadEditModal({{ trend['id'] }})">
+                    Edit
                 </button>
+                <form method="post" action="{{ url_for('delete_trend', id=trend['id']) }}" style="width: 100%;">
+                    <button type="submit" class="btn btn-sm btn-danger" style="width: 100%;">Delete</button>
+                </form>
             </div>
         </li>
         {% endfor %}
@@ -96,17 +147,6 @@
 </div>
 
 <script>
-    function editTrend(id, systemId, tagSetId, cycles, cycleTime, bufferSize, description, tags, modal_title) {
-        document.getElementById('trend_id').value = id;
-        document.getElementById('system_id').value = systemId;
-        document.getElementById('tag_set_id').value = tagSetId;
-        document.getElementById('cycles').value = cycles;
-        document.getElementById('cycle_time').value = cycleTime;
-        document.getElementById('buffer_size').value = bufferSize;
-        document.getElementById('description').value = description;
-        document.getElementById('exampleModalLongTitle').innerText = modal_title;
-    }
-
     function calculateTrendDuration() {
         var cycles = parseInt(document.getElementById('cycles').value, 10);
         var cycleTime = parseFloat(document.getElementById('cycle_time').value);
@@ -141,12 +181,71 @@
         }
     }
 
+    function calculateEditTrendDuration() {
+
+        var cycles = parseInt(document.getElementById('edit_cycles').value, 10);
+        var cycleTime = parseFloat(document.getElementById('edit_cycle_time').value);
+        var bufferSize = parseInt(document.getElementById('edit_buffer_size').value, 10);
+
+        if (!isNaN(cycles) && !isNaN(cycleTime)) {
+            // Calculate total trend duration
+            var totalSeconds = (cycles * cycleTime);
+
+            var hours = Math.floor(totalSeconds / 3600);
+            var minutes = Math.floor((totalSeconds % 3600) / 60);
+            var seconds = totalSeconds % 60;
+
+            var durationText = hours + ' hours, ' + minutes + ' minutes, ' + seconds.toFixed(2) + ' seconds';
+            document.getElementById('edit_trend_duration').innerText = 'Estimated Duration: ' + durationText;
+        } else {
+            document.getElementById('edit_trend_duration').innerText = '';
+        }
+
+        if (!isNaN(bufferSize) && !isNaN(cycleTime)) {
+            // Calculate how often to save to file
+            var fileTotalSeconds = (bufferSize * cycleTime);
+
+            var fileHours = Math.floor(fileTotalSeconds / 3600);
+            var fileMinutes = Math.floor((fileTotalSeconds % 3600) / 60);
+            var fileSeconds = fileTotalSeconds % 60;
+
+            var saveText = 'Save to file every ' + fileMinutes + ' minutes, ' + fileSeconds.toFixed(2) + ' seconds';
+            document.getElementById('edit_buffer_duration').innerText = saveText;
+        } else {
+            document.getElementById('edit_buffer_duration').innerText = '';
+        }
+        }
+
+    function loadEditModal(id) {
+        fetch('/get_trend/' + id)
+        .then(response => response.json())
+        .then(data => {
+            console.log(data);
+            document.getElementById('edit_trend_id').value = data.trend.id;
+            document.getElementById('edit_device_number').value = data.trend.device_number;
+            document.getElementById('edit_tags').value = data.trend.tags;
+            document.getElementById('edit_cycles').value = data.trend.cycles;
+            document.getElementById('edit_cycle_time').value = data.trend.cycle_time;
+            document.getElementById('edit_buffer_size').value = data.trend.buffer_size;
+            document.getElementById('edit_description').value = data.trend.description;
+            calculateEditTrendDuration();
+        })
+        .catch(error => console.error('Error:', error));
+
+    }
+
     document.getElementById('cycles').addEventListener('input', calculateTrendDuration);
     document.getElementById('cycle_time').addEventListener('input', calculateTrendDuration);
     document.getElementById('buffer_size').addEventListener('input', calculateTrendDuration);
 
-    // Initial calculation
+    // Add event listeners for the edit modal fields
+    document.getElementById('edit_cycles').addEventListener('input', calculateEditTrendDuration);
+    document.getElementById('edit_cycle_time').addEventListener('input', calculateEditTrendDuration);
+    document.getElementById('edit_buffer_size').addEventListener('input', calculateEditTrendDuration);
+
+    // Initial calculation for the add modal
     calculateTrendDuration();
+    // calculateEditTrendDuration();
 
 </script>
 {% endblock %}
