--- a/templates/index.html
+++ b/templates/index.html
@@ -18,25 +18,39 @@
     </div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}My Application{% endblock %}</title>
+    <title>{% block title %}AB Trending{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
 </head>
-<body>
+<body style="min-height: 100vh; padding: 15px;">
     <ul class="nav justify-content-center nav-tabs">
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('manage_systems') }}">Manage Systems</a>
+            <a class="nav-link {% if active_page == 'manage_systems' %}active{% endif %}" href="{{ url_for('manage_systems') }}">
+                <span style="font-size: large; {% if active_page == 'manage_systems' %}font-weight: bold;{% endif %}">Manage Systems</span>
+            </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('manage_tags') }}">Manage Tags</a>
+            <a class="nav-link {% if active_page == 'manage_tags' %}active{% endif %}" href="{{ url_for('manage_tags') }}">
+                <span style="font-size: large; {% if active_page == 'manage_tags' %}font-weight: bold;{% endif %}">Manage Tags</span>
+            </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('trend_control') }}">Trend Control</a>
+            <a class="nav-link {% if active_page == 'trend_control' %}active{% endif %}" href="{{ url_for('trend_control') }}">
+                <span style="font-size: large; {% if active_page == 'trend_control' %}font-weight: bold;{% endif %}">Trend Control</span>
+            </a>
         </li>
     </ul>
 
-    <div class="container mt-5">
-        {% block content %}{% endblock %}
+    <div class="container-fluid mt-4">
+        <div class="row">
+            <!-- Left column for menu or other content -->
+            <div class="col-md-4">
+                {% block content %}{% endblock %}
+            </div>
+            <!-- Right column for data table -->
+            <div class="col-md-8">
+                {% include 'data_table.html' %}
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -61,6 +75,10 @@
             });
         });
 
+        
+        function confirmDelete() {
+            return confirm('Are you sure you want to delete this tag set? This action cannot be undone.');
+        }
     </script>
     <style>
         .fade-in {
@@ -74,11 +92,31 @@
             opacity: 0;
             transition: opacity 2s ease-out; /* Transition for fade-out effect */
         }
+        /* https://codepen.io/sosuke/pen/Pjoqqp */
+        .svg-danger {
+            filter: invert(16%) sepia(100%) saturate(3530%) hue-rotate(27deg) brightness(103%) contrast(106%); /* Red #cc3300 */
+        }
+        .svg-add {
+            filter: invert(50%) sepia(56%) saturate(6708%) hue-rotate(71deg) brightness(102%) contrast(101%); /* Green #339900 */
+        }
+        .svg-edit {
+            filter: invert(74%) sepia(94%) saturate(1594%) hue-rotate(1deg) brightness(103%) contrast(107%); /* yellow #ffcc00 */
+        }
+        .svg-start {
+            filter: invert(50%) sepia(56%) saturate(6708%) hue-rotate(71deg) brightness(102%) contrast(101%); /* Green #339900 */
+        }
+        .svg-stop {
+            filter: invert(16%) sepia(100%) saturate(3530%) hue-rotate(27deg) brightness(103%) contrast(106%); /* Red #cc3300 */
+        }
+        .svg-pause {
+            filter: invert(74%) sepia(94%) saturate(1594%) hue-rotate(1deg) brightness(103%) contrast(107%); /* yellow #ffcc00 */
+        }
+
+        /* Custom padding around the sides */
+        body {
+            padding-left: 15px;
+            padding-right: 15px;
+        }
     </style>
-        <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
