--- a/templates/manage_tags.html
+++ b/templates/manage_tags.html
@@ -3,93 +3,96 @@
 {% block title %}Manage Tags{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <div class="d-flex justify-content-between align-items-center">
-        <h1>Manage Tags Sets</h1>
-        <!-- Button trigger modal with plus icon -->
-        <button type="button" class="btn-link p-0" data-toggle="modal" data-target="#formModal" style="border: none; background: none; box-shadow: none;" onclick="editTagSet('', '', '', 'Add Tag Set')">
-            <img src="{{ url_for('static', filename='images/plus.svg') }}" alt="Plus Icon" width="32" height="32">
-        </button>
-    </div>
-    <br>
-
     <!-- Modal -->
     <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">Add Tag Set</h5>
-            <button type="button" class="btn-link p-0" data-dismiss="modal" style="border: none; background: none; box-shadow: none;" onclick="editTagSet('', '', '', '')">
-                <img src="{{ url_for('static', filename='images/x-square.svg') }}" alt="Close" width="16" height="16">
-            </button>
-            </div>
-            <div class="modal-body">    
-            <!-- Tag Set Form -->
-            <form method="post" action="{{ url_for('manage_tags') }}">
-                <input type="hidden" id="tag_set_id" name="tag_set_id" value="">
-                <div class="mb-3">
-                    <label for="tag_set_name" class="form-label">Tag Set Name:</label>
-                    <input type="text" class="form-control" id="tag_set_name" name="tag_set_name" required>
-                </div>
-                <div class="mb-3">
-                    <label for="tags" class="form-label">Tags (one per line):</label>
-                    <textarea id="tags" name="tags" class="form-control" rows="20" spellcheck="false" required></textarea>
-                </div>
-  
-            </div>
-            <div class="modal-footer">
-            <button type="submit" class="btn btn-primary w-100">Save Tag Set</button>
-            </form> 
-            </div>
-        </div>
-        </div>
-    </div> 
-
-    <!-- Existing Tag Sets -->
-    <ul class="list-group">
-        {% for tag_set in tag_sets %}
-        <li class="list-group-item d-flex justify-content-between align-items-start">
-            <div class="flex-grow-1" style="margin-right: 10px;">
-                <strong>{{ tag_set['tag_set_name'] }}</strong>
-                <textarea id="{{ tag_set['tag_set_name'] }}" 
-                          name="{{ tag_set['tag_set_name'] }}" 
-                          class="form-control" 
-                          rows="5" 
-                          spellcheck="false" 
-                          style="border: none; background: none; box-shadow: none;" 
-                          required>{{ tag_set['tags'] }}</textarea>
-            </div>
-            <div class="d-flex flex-column align-items-start">
-                <!-- Safely pass the tag set data -->
-                <form method="post" action="{{ url_for('delete_tag_set', id=tag_set['id']) }}" onsubmit="return confirmDelete();">
-                    <button type="submit" class="btn-link p-0" style="border: none; background: none; box-shadow: none;">
-                        <img src="{{ url_for('static', filename='images/x-square.svg') }}" alt="Close" width="16" height="16">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="formModalTitle">Add Tag Set</h5>
+                    <button type="button" class="btn-link p-0" data-bs-dismiss="modal" style="border: none; background: none; box-shadow: none;" onclick="editTagSet('', '', '', '')">
+                        <img class="svg-danger" src="{{ url_for('static', filename='images/x-square.svg') }}" alt="Close" width="24" height="24">
                     </button>
-                </form>
-                <button class="btn-link p-0" style="border: none; background: none; box-shadow: none;" data-toggle="modal" data-target="#formModal" onclick="editTagSet({{ tag_set['id'] }}, '{{ tag_set['tag_set_name'] }}', `{{ tag_set['tags'] }}`, 'Edit Tag Set')">
-                    <img src="{{ url_for('static', filename='images/edit.svg') }}" alt="Edit" width="16" height="16">
-                </button>
+                </div>
+                <div class="modal-body">    
+                    <!-- Tag Set Form -->
+                    <form method="post" action="{{ url_for('manage_tags') }}">
+                        <input type="hidden" id="tag_set_id" name="tag_set_id" value="">
+                        <div class="mb-3">
+                            <label for="tag_set_name" class="form-label">Tag Set Name:</label>
+                            <input type="text" class="form-control" id="tag_set_name" name="tag_set_name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="tags" class="form-label">Tags (one per line):</label>
+                            <textarea id="tags" name="tags" class="form-control" rows="20" spellcheck="false" required></textarea>
+                        </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary w-100">Save Tag Set</button>
+                    </form> 
+                </div>
             </div>
-        </li>
-              
-        {% endfor %}
-    </ul>
-</div>
+        </div>
+    </div>
 
-<script>
-    function editTagSet(id, tagSetName, tags, modal_title) {
-        console.log('editTagSet function triggered with:', { id, tagSetName, tags });
-        document.getElementById('tag_set_id').value = id;
-        document.getElementById('tag_set_name').value = tagSetName;
-        document.getElementById('tags').value = tags; // tags should be a multiline string
-        document.getElementById('exampleModalLongTitle').innerText = modal_title; // tags should be a multiline string
-    }
+    <div class="d-flex justify-content-between align-items-center">
+        <h2>Manage Tags Sets</h2>
+        <!-- Button trigger modal for adding a new trend -->
+        <button type="button" class="btn-link p-0" data-bs-toggle="modal" data-bs-target="#formModal" style="border: none; background: none; box-shadow: none;" onclick="editTagSet('', '', '', 'Add Tag Set')">
+            <img class="svg-add" src="{{ url_for('static', filename='images/plus.svg') }}" alt="Plus Icon" width="32" height="32">
+        </button>
+    </div>
+    <!-- Existing Tag Sets -->
+    <hr>
 
-    function confirmDelete() {
-        return confirm('Are you sure you want to delete this tag set? This action cannot be undone.');
-    }
+    {% for tag_set in tag_sets %}
+    <div class="table-responsive mb-4">
+        <table class="table table-bordered table-striped mb-0">
+            <tbody>
+                <tr>
+                    <th class="text-nowrap" scope="row"><strong>Tag Set Name</strong></th>
+                    <td><code>{{ tag_set['tag_set_name'] }}</code></td>
+                    <td class="align-top text-center">
+                        <!-- Delete Button -->
+                        <form method="post" action="{{ url_for('delete_tag_set', id=tag_set['id']) }}" onsubmit="return confirmDelete();">
+                            <button type="submit" class="btn-link p-0" style="border: none; background: none; box-shadow: none;">
+                                <img class="svg-danger" src="{{ url_for('static', filename='images/x-square.svg') }}" alt="Delete" width="24" height="24">
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+                <tr>
+                    <th class="text-nowrap" scope="row"><strong>Tags</strong></th>
+                    <td>
+                        <textarea id="{{ tag_set['tag_set_name'] }}" 
+                                  name="{{ tag_set['tag_set_name'] }}" 
+                                  class="form-control" 
+                                  rows="5" 
+                                  spellcheck="false" 
+                                  style="border: none; background: none; box-shadow: none;" 
+                                  required>{{ tag_set['tags'] }}</textarea>
+                    </td>
+                    <td rowspan="2" class="align-top text-center">
+                        <!-- Edit Button to trigger the Edit Modal -->
+                        <button class="btn-link p-0" style="border: none; background: none; box-shadow: none;" data-bs-toggle="modal" data-bs-target="#formModal" onclick="editTagSet({{ tag_set['id'] }}, '{{ tag_set['tag_set_name'] }}', `{{ tag_set['tags'] }}`, 'Edit Tag Set')">
+                            <img class="svg-edit" src="{{ url_for('static', filename='images/edit.svg') }}" alt="Edit" width="24" height="24">
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    {% endfor %}
 
-    document.getElementById('tags').addEventListener('paste', function(event) {
+    <script>
+        function editTagSet(id, tagSetName, tags, modal_title) {
+            console.log('editTagSet function triggered with:', { id, tagSetName, tags });
+            document.getElementById('tag_set_id').value = id;
+            document.getElementById('tag_set_name').value = tagSetName;
+            document.getElementById('tags').value = tags; // tags should be a multiline string
+            document.getElementById('formModalTitle').innerText = modal_title;
+        }
+
+        document.getElementById('tags').addEventListener('paste', function(event) {
             // Prevent the default paste action
             event.preventDefault();
             
@@ -111,9 +114,5 @@
             // Insert the final text into the textarea
             document.getElementById('tags').value = finalText;
         });
-
-</script>
+    </script>
 {% endblock %}
-
-
-  
